--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -16,30 +16,40 @@
 </head>
 <body class="p-0">
 <div th:insert="fragments/header.html :: header"></div>
-<div class="mt-5 container d-flex justify-content-center align-items-center flex-column flex-lg-row gap-5 align-self-start flex-wrap">
-    <div class="card my-card">
-        <div class="card-header position-relative">
-            New Sale
-        </div>
-        <div class="card-body">
-            <form action="/sales" method="post">
-                <div class="alert alert-danger" role="alert" th:if="${param.error}">
-                    Title Already Exists
-                </div>
-                <p>
-                    <label class="sr-only mb-1" for="title">Title</label>
-                    <input autofocus class="form-control" id="title" name="title"
-                           placeholder="Title" required type="text">
-                </p>
-                <p>
-                    <label class="sr-only mb-1" for="description">Description</label>
-                    <input autofocus class="form-control" id="description" name="description"
-                           placeholder="Description" required type="text">
-                </p>
-                <button class="btn btn-dark" type="submit">Submit</button>
-            </form>
-        </div>
+<div class="container d-flex justify-content-center mt-5">
+    <button aria-controls="new-sale" class="btn btn-dark btn-lg" data-bs-target="#new-sale"
+            data-bs-toggle="offcanvas"
+            type="button">
+        Sell Now
+    </button>
+</div>
+<div aria-labelledby="new-sale-label" class="offcanvas offcanvas-start" data-bs-backdrop="false"
+     data-bs-scroll="true"
+     id="new-sale" tabindex="-1">
+    <div class="offcanvas-header pb-0">
+        <h5 class="offcanvas-title" id="new-sale-label">New Sale</h5>
+        <button aria-label="Close" class="btn-close text-reset" data-bs-dismiss="offcanvas" type="button"></button>
     </div>
+    <div class="offcanvas-body">
+        <form action="/sales" method="post">
+            <div class="alert alert-danger" role="alert" th:if="${param.error}">
+                Title Already Exists
+            </div>
+            <p>
+                <label class="sr-only mb-1" for="title">Title</label>
+                <input autofocus class="form-control" id="title" name="title"
+                       placeholder="Title" required type="text">
+            </p>
+            <p>
+                <label class="sr-only mb-1" for="description">Description</label>
+                <input autofocus class="form-control" id="description" name="description"
+                       placeholder="Description" required type="text">
+            </p>
+            <button class="btn btn-dark" type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+<div class="mt-5 container d-flex justify-content-center align-items-center flex-column flex-lg-row gap-5 align-self-start flex-wrap">
     <div th:each="sale: ${sales}">
         <div class="card my-card" id="sale-iterable-card">
             <div class="card-header">On Sale</div>
@@ -58,10 +68,7 @@
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
