--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -8,20 +8,8 @@
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
-    <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/card.css" rel="stylesheet">
-    <link href="/css/form.css" rel="stylesheet">
-    <link href="/css/global.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <title>My Account</title>
-    <style>
-        #username-card {
-            display: none;
-        }
-
-        #password-card {
-            display: none;
-        }
-    </style>
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
@@ -46,14 +34,14 @@
             <h6 class="card-subtitle my-2 text-muted">
                 Username
                 <a href="javascript:void(0)" id="open-username-card">
-                    <img alt="edit" src="/images/pencil-fill.svg">
+                    <img alt="edit" src="/images/icons/pencil.svg">
                 </a>
             </h6>
             <p class="card-text" th:text="${currentUser.getUsername()}"></p>
             <h6 class="card-subtitle mb-2 text-muted">
                 Password
                 <a href="javascript:void(0)" id="open-password-card">
-                    <img alt="edit" src="/images/pencil-fill.svg">
+                    <img alt="edit" src="/images/icons/pencil.svg">
                 </a>
             </h6>
             <p class="card-text">********</p>
@@ -64,7 +52,7 @@
         <div class="card-header position-relative">
             Change Username
             <a href="javascript:void(0)" id="close-username-card">
-                <img alt="x" class="position-absolute end-0 top-0" src="/images/x.svg">
+                <img alt="x" class="position-absolute end-0 top-0" src="/images/icons/x.svg">
             </a>
         </div>
         <div class="card-body">
@@ -99,7 +87,7 @@
         <div class="card-header position-relative">
             Change Password
             <a href="javascript:void(0)" id="close-password-card">
-                <img alt="x" class="position-absolute end-0 top-0" src="/images/x.svg">
+                <img alt="x" class="position-absolute end-0 top-0" src="/images/icons/x.svg">
             </a>
         </div>
         <div class="card-body">
