--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,17 +8,13 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Header</title>
-    <!--
-        reference to style of fragments must be found in all pages where the fragment is used
-        and not in this head, because this page is never rendered
-    -->
 </head>
 <body>
 <div th:fragment="header">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img alt="Turbo" height="40" src="/images/t.png">
+                <img alt="Turbo" height="40" src="/images/icons/t.png">
             </a>
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                     class="navbar-toggler" data-bs-target="#navbarSupportedContent"
@@ -56,7 +52,7 @@
                     <button class="btn-outline-dark btn">Login</button>
                 </a>
                 <a class="mx-2 desktop" href="/account" sec:authorize="isAuthenticated()">
-                    <img alt="Account" src="/images/account.png" width="40">
+                    <img alt="Account" src="/images/icons/account.png" width="40">
                 </a>
                 <a class="desktop" href="/logout" sec:authorize="isAuthenticated()">
                     <button class="btn-outline-dark btn">Logout</button>
