--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,9 +8,7 @@
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
-    <link href="/css/home.css" rel="stylesheet">
-    <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/global.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <title>Sell and Buy in just a few clicks!</title>
 </head>
 <body>
