--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -8,10 +8,7 @@
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
-    <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/form.css" rel="stylesheet">
-    <link href="/css/card.css" rel=stylesheet>
-    <link href="/css/global.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <title>Sell and buy in just a few clicks!</title>
 </head>
 <body class="p-0">
